# pdfsvg-calibrator

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  README.md  pyproject.toml  pytest.ini
configs/: default.yaml  svg_export.yaml
docs/: CODEGEN_BRIEF.md  HOW_IT_WORKS.md
examples/: run_example.md
scripts/: calibrate.sh
src/coarse/: corr.py  geom.py  kdmatch.py  pipeline.py  profiles.py
src/pdfsvg_calibrator/: __init__.py  calibrate.py  calibrate_pipeline.py  cli.py  config.py  debug_utils.py  debugviz.py  dimension_scale_integration.py  dimscale_extractor.py  fit_model.py  geom.py  io_svg_pdf.py  match_verify.py  metrics.py  orientation.py  overlays.py  pagebox_align.py  pdfium_extrac_lowlevel.py  pdfium_extract.py  raster_align.py  rendering.py  svg_autogen.py  svg_path.py  timing.py  transform.py  types.py  utils.py  verify_distmap.py  xml_guard.py
src/pdfsvg_calibrator/core/: grid_safety.py
src/pdfsvg_calibrator/debug/: pdf_probe.py  pdf_segments_debug.py  pdfium_introspect.py  pdfium_probe_types.py
src/pdfsvg_calibrator/utils/: __init__.py  timer.py
tests/: test_cli_end_to_end.py  test_cli_smoke.py  test_coarse_alignment_no_tuple_index.py  test_coarse_pipeline.py  test_fit_model.py  test_geom_hv.py  test_grid_ndarray_contract.py  test_matching.py  test_neighbor_performance.py  test_orientation_gate_flips.py  test_overlays.py  test_phase_correlation_translation.py  test_runtime_budget.py  test_scale_seed_clamp.py  test_select_lines.py  test_svg_merge.py  test_svg_path.py
